# ChangeLog for dev-games/openscenegraph
# Copyright 1999-2014 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/dev-games/openscenegraph/ChangeLog,v 1.56 2014/02/13 21:22:42 reavertm Exp $

  13 Feb 2014; Maciej Mrozowski <reavertm@gentoo.org>
  files/openscenegraph-3.0.1-cmake.patch:
  Use correct libdir, bug 500716

  15 Jun 2013; Pacho Ramos <pacho@gentoo.org> openscenegraph-3.0.1-r1.ebuild:
  media-libs/openinventor will be dropped

  02 Mar 2013; Markos Chandras <hwoarang@gentoo.org>
  openscenegraph-3.0.1-r1.ebuild:
  Move Qt dependencies to the new category

  08 Feb 2013; Alexis Ballier <aballier@gentoo.org>
  openscenegraph-3.0.1-r1.ebuild, +files/openscenegraph-3.0.1-libav-9.patch:
  Fix build with latest ffmpeg / libav. Bug #439606.
  upstream svn rev. 13335 contains similar changes.
  no need to upstream this patch

*openscenegraph-3.0.1-r1 (07 Feb 2013)

  07 Feb 2013; Maciej Mrozowski <reavertm@gentoo.org>
  -openscenegraph-3.0.1.ebuild, +openscenegraph-3.0.1-r1.ebuild:
  Build shared libs exclusively, bug 448050.

  14 Jul 2012; Maciej Mrozowski <reavertm@gentoo.org>
  -files/openscenegraph-2.8.3-cmake.patch,
  -files/openscenegraph-2.8.3-curl.patch,
  -files/openscenegraph-2.8.3-ffmpeg.patch, -openscenegraph-2.8.3.ebuild:
  Remove old

  10 Jul 2012; Michael Weber <xmw@gentoo.org> openscenegraph-3.0.1.ebuild:
  ppc stable (bug 405665)

  04 Jun 2012; Zac Medico <zmedico@gentoo.org> openscenegraph-3.0.1.ebuild:
  inherit flag-o-matic for append-cppflags

  03 May 2012; Jeff Horelick <jdhore@gentoo.org> openscenegraph-2.8.3.ebuild,
  openscenegraph-3.0.1.ebuild:
  dev-util/pkgconfig -> virtual/pkgconfig

  06 Apr 2012; Andreas Schuerch <nativemad@gentoo.org>
  openscenegraph-3.0.1.ebuild:
  x86 stable, see bug 405665

  11 Mar 2012; Tony Vroon <chainsaw@gentoo.org> openscenegraph-3.0.1.ebuild:
  Marked stable on AMD64 based on arch testing by Maurizio "k01" Camisaschi &
  Elijah "Armageddon" El Lazkani in bug #405665.