@@ -1,13 +1,13 @@
 DEFINED_PHASES=compile configure install prepare test
-DEPEND=x11-libs/libSM x11-libs/libXext virtual/glu virtual/opengl curl? ( net-misc/curl ) examples? ( fltk? ( x11-libs/fltk:1[opengl] ) fox? ( x11-libs/fox:1.6[opengl] ) glut? ( media-libs/freeglut ) gtk? ( x11-libs/gtkglext ) qt4? ( dev-qt/qtcore:4 dev-qt/qtgui:4 dev-qt/qtopengl:4 ) sdl? ( media-libs/libsdl ) wxwidgets? ( x11-libs/wxGTK[opengl,X] ) ) ffmpeg? ( virtual/ffmpeg ) gdal? ( sci-libs/gdal ) gif? ( media-libs/giflib ) itk? ( dev-tcltk/itk ) jpeg? ( virtual/jpeg ) jpeg2k? ( media-libs/jasper ) openexr? ( media-libs/ilmbase media-libs/openexr ) openinventor? ( media-libs/coin ) pdf? ( app-text/poppler[cairo] ) png? ( media-libs/libpng:0 ) svg? ( gnome-base/librsvg x11-libs/cairo ) tiff? ( media-libs/tiff:0 ) truetype? ( media-libs/freetype:2 ) vnc? ( net-libs/libvncserver ) xine? ( media-libs/xine-lib ) xrandr? ( x11-libs/libXrandr ) zlib? ( sys-libs/zlib ) app-arch/unzip virtual/pkgconfig x11-proto/xextproto doc? ( app-doc/doxygen ) xrandr? ( x11-proto/randrproto ) sys-devel/make >=dev-util/cmake-2.8.12 userland_GNU? ( >=sys-apps/findutils-4.4.0 )
+DEPEND=x11-libs/libSM x11-libs/libXext virtual/glu virtual/opengl curl? ( net-misc/curl ) examples? ( fltk? ( x11-libs/fltk:1[opengl] ) fox? ( x11-libs/fox:1.6[opengl] ) glut? ( media-libs/freeglut ) gtk? ( x11-libs/gtkglext ) qt4? ( dev-qt/qtcore:4 dev-qt/qtgui:4 dev-qt/qtopengl:4 ) sdl? ( media-libs/libsdl ) wxwidgets? ( x11-libs/wxGTK[opengl,X] ) ) ffmpeg? ( virtual/ffmpeg ) gdal? ( sci-libs/gdal ) gif? ( media-libs/giflib ) jpeg? ( virtual/jpeg ) jpeg2k? ( media-libs/jasper ) openexr? ( media-libs/ilmbase media-libs/openexr ) openinventor? ( media-libs/coin ) pdf? ( app-text/poppler[cairo] ) png? ( media-libs/libpng:0 ) svg? ( gnome-base/librsvg x11-libs/cairo ) tiff? ( media-libs/tiff:0 ) truetype? ( media-libs/freetype:2 ) vnc? ( net-libs/libvncserver ) xine? ( media-libs/xine-lib ) xrandr? ( x11-libs/libXrandr ) zlib? ( sys-libs/zlib ) app-arch/unzip virtual/pkgconfig x11-proto/xextproto doc? ( app-doc/doxygen ) xrandr? ( x11-proto/randrproto ) sys-devel/make >=dev-util/cmake-2.8.12 userland_GNU? ( >=sys-apps/findutils-4.4.0 )
 DESCRIPTION=Open source high performance 3D graphics toolkit
-EAPI=3
+EAPI=5
 HOMEPAGE=http://www.openscenegraph.org/projects/osg/
-IUSE=curl debug doc examples ffmpeg fltk fox gdal gif glut gtk itk jpeg jpeg2k openexr openinventor osgapps pdf png qt4 sdl svg tiff truetype vnc wxwidgets xine xrandr zlib
+IUSE=curl debug doc examples ffmpeg fltk fox gdal gif glut gtk jpeg jpeg2k openexr openinventor osgapps pdf png qt4 sdl svg tiff truetype vnc wxwidgets xine xrandr zlib
 KEYWORDS=amd64 ppc x86
 LICENSE=wxWinLL-3 LGPL-2.1
-RDEPEND=x11-libs/libSM x11-libs/libXext virtual/glu virtual/opengl curl? ( net-misc/curl ) examples? ( fltk? ( x11-libs/fltk:1[opengl] ) fox? ( x11-libs/fox:1.6[opengl] ) glut? ( media-libs/freeglut ) gtk? ( x11-libs/gtkglext ) qt4? ( dev-qt/qtcore:4 dev-qt/qtgui:4 dev-qt/qtopengl:4 ) sdl? ( media-libs/libsdl ) wxwidgets? ( x11-libs/wxGTK[opengl,X] ) ) ffmpeg? ( virtual/ffmpeg ) gdal? ( sci-libs/gdal ) gif? ( media-libs/giflib ) itk? ( dev-tcltk/itk ) jpeg? ( virtual/jpeg ) jpeg2k? ( media-libs/jasper ) openexr? ( media-libs/ilmbase media-libs/openexr ) openinventor? ( media-libs/coin ) pdf? ( app-text/poppler[cairo] ) png? ( media-libs/libpng:0 ) svg? ( gnome-base/librsvg x11-libs/cairo ) tiff? ( media-libs/tiff:0 ) truetype? ( media-libs/freetype:2 ) vnc? ( net-libs/libvncserver ) xine? ( media-libs/xine-lib ) xrandr? ( x11-libs/libXrandr ) zlib? ( sys-libs/zlib )
+RDEPEND=x11-libs/libSM x11-libs/libXext virtual/glu virtual/opengl curl? ( net-misc/curl ) examples? ( fltk? ( x11-libs/fltk:1[opengl] ) fox? ( x11-libs/fox:1.6[opengl] ) glut? ( media-libs/freeglut ) gtk? ( x11-libs/gtkglext ) qt4? ( dev-qt/qtcore:4 dev-qt/qtgui:4 dev-qt/qtopengl:4 ) sdl? ( media-libs/libsdl ) wxwidgets? ( x11-libs/wxGTK[opengl,X] ) ) ffmpeg? ( virtual/ffmpeg ) gdal? ( sci-libs/gdal ) gif? ( media-libs/giflib ) jpeg? ( virtual/jpeg ) jpeg2k? ( media-libs/jasper ) openexr? ( media-libs/ilmbase media-libs/openexr ) openinventor? ( media-libs/coin ) pdf? ( app-text/poppler[cairo] ) png? ( media-libs/libpng:0 ) svg? ( gnome-base/librsvg x11-libs/cairo ) tiff? ( media-libs/tiff:0 ) truetype? ( media-libs/freetype:2 ) vnc? ( net-libs/libvncserver ) xine? ( media-libs/xine-lib ) xrandr? ( x11-libs/libXrandr ) zlib? ( sys-libs/zlib )
 SLOT=0
 SRC_URI=http://www.openscenegraph.org/downloads/stable_releases/OpenSceneGraph-3.0.1/source/OpenSceneGraph-3.0.1.zip
 _eclasses_=cmake-utils	da2974fcb060ec927e93a17c835afa67	eutils	06133990e861be0fe60c2b428fd025d9	flag-o-matic	75e24bac8423c515dd9c5717f08feb83	multilib	3bf24e6abb9b76d9f6c20600f0b716bf	toolchain-funcs	0f1760274637a138b99bb649202ea402	wxwidgets	6d6eec2685256d35511e7b6d5461bec9
-_md5_=bdc250b8e4565a2ce93b873f074cc7c1
+_md5_=10c3017acd091413e469e152bbfbb5ee
