@@ -1354,7 +1354,6 @@ dev-games/ogre:tools - build+install helper tools
 dev-games/ogre:zip - support zip archives
 dev-games/openscenegraph:fox - Build examples using x11-libs/fox library
 dev-games/openscenegraph:gdal - Enable support for sci-libs/gdal library
-dev-games/openscenegraph:itk - Build dev-tcltk/itk plugin
 dev-games/openscenegraph:openinventor - Build OpenInventor plugin
 dev-games/openscenegraph:osgapps - Build osg applications
 dev-games/openscenegraph:xrandr - Enable support for the X xrandr extension
